[project]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Apache License V 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"GitHub" = "https://github.com/tidal-music/per-transformers"

[tool.poetry]
name = "tidal_per_transformers"
version = "0.2.3"
description = "common transformers used by the tidal personalization team."
authors = [
    "Loay <loay@squareup.com>",
    "Tao <tma@squareup.com>",
    "Thomas <talmenningen@squareup.com>",
]

license = "Apache License V 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0"
pyspark = ">=3.5.0"
numpy = "^1.26.4"
pandas = ">=1.4.2"
great-expectations = "0.16.15"
scikit-learn = "1.4.0"
alphabet-detector = "0.0.7"
pyarrow = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
coverage = ">=4.5.2"
pytest-cov = ">=4.1.0"
coveralls = ">=1.6.0"
mock = ">=2.0.0"
moto = ">=3.1.11"
setuptools  = ">=69.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
