[tool.poetry]
name = "tidal_per_transformers"
version = "0.4.5"
description = "common transformers used by the tidal personalization team."
authors = [
    "Loay <loay@squareup.com>",
    "Tao <tma@squareup.com>",
    "Thomas <talmenningen@squareup.com>",
]

license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tidal-music/tidal-algorithmic-mixes"

[tool.poetry.dependencies]
python = ">=3.10.0"
pyspark = ">=3.5.0"
numpy = "^1.23.0"
pandas = ">=1.4.2"
great-expectations = "0.16.15"
alphabet-detector = "0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
