[tool.poetry]
name = "tidal_per_transformers"
version = "0.5.0"
description = "common transformers used by the tidal personalization team."
authors = [
    "Loay <loay@squareup.com>",
    "Tao <tma@squareup.com>",
    "Thomas <talmenningen@squareup.com>",
]

license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/tidal-music/tidal-algorithmic-mixes"

[tool.poetry.dependencies]
python = ">=3.12.0"
pyspark = ">=4.0.0"
numpy = "^2.1.3"
pandas = "^2.3.2"
pyarrow = ">=8.0.0"
alphabet-detector = "0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
setuptools = "80.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
